# sad-russians

./: CMakeLists.txt  README.md  model_executor.cpp  source_notebook.ipynb
FindFace/: CMakeLists.txt  FindFace.cpp  readme.md
findFace/: CMakeLists.txt  FindFace — копия.cpp
nb/: CycleGanApply.ipynb  CycleGanSmile.ipynb  emotion_recognition.ipynb
py_train/CycleGAN/: datasets.py
py_train/models/: README.md
py_train/nb/: CycleGanApply.ipynb  CycleGanSmile.ipynb  emotion_recognition.ipynb
py_web/: README.md  loader.py
py_web/static/: bootstrap.css  bootstrap.min.css
py_web/templates/: title.html
src/: CMakeLists.txt  ChangeEmotion.cpp  ChangeEmotion.h  FaceHandler.cpp  FaceHandler.h  README.MD  install.sh  utils.cpp  utils.h
src/libs/: README.md
