cmake_minimum_required(VERSION 3.1)
project(FindFace)
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(OpenCV_DIR /Users/r.britkov/installation/OpenCV-master/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
add_executable(FindFace FindFace.cpp )
target_link_libraries( FindFace ${OpenCV_LIBS})